--- a/website/styles/main-v2.css
+++ b/website/styles/main-v2.css
@@ -1,15 +1,7 @@
-.member-intro {
-    text-align: center;
-}
-
-.member-info {
-    text-align: center;
-}
-
 .member-card {
-    width: 305px;
+    width: 285px;
     height: 360px;
-    margin: 0 35px;
+    margin: 0 20px;
     border-top-style: solid;
     border-top-color: darkorange;
     border-top-width: 3px;
@@ -32,9 +24,15 @@
     color: darkorange;
 }
 
-.member-card img{
-    width: 200px;
-    height: 300px;
+.member-card img {
+    width: 180px;
+    height: 270px;
     float: right;
-    display: block;
+    display: inline-block;
+}
+
+.container {
+    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
 }
